<resources>
    <string name="app_name">Car Payment</string>
    <string name="label_carValue">Car Value</string>
    <string name="carValue">$10000.00</string>
    <string name="label_months">Months</string>
    <string name="months">30</string>
    <string name="label_downPayment">Down Payment</string>
    <string name="downPayment">$1200.00</string>
    <string name="label_leaseRate">Lease Rate</string>
    <string name="leaseRate">3.5%</string>
    <string name="label_monthly_payment">Monthly Payment</string>
    <string name="monthy_payment">$449.04</string>
    <string name="modify_data">Modify Data</string>

    <string name="downPaymentDecimal">1200.00</string>
    <string name="months2">30</string>
    <string name="carValueDecimal">100000.00</string>
    <string name="leaseRateDecimal">.035</string>
    <string name="done">Done</string>
</resources>
